--- a/.github/workflows/testdeploy.yml
+++ b/.github/workflows/testdeploy.yml
@@ -7,16 +7,11 @@ on:
 jobs:  
   build:    
     runs-on: ubuntu-latest
-    
-    steps:      
+    steps:
       - uses: actions/checkout@v3
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
-      - name: Sync output to S3
-        run: |
-          aws s3 sync s3://test-s3bucket-for-github-actions --delete
+      - run: aws s3 sync . s3://test-s3bucket-for-github-actions
