--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,35 +1,42 @@
 version: 2.1
 orbs:
   aws-s3: circleci/aws-s3@1.0.6
-commands:
-  install-awscliv2:
-    description: Install AWS CLI2
-    steps:
-      - run:
-          name: Install AWS CLI2
-          command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-            aws --version
+#commands:
+#  install-awscliv2:
+#    description: Install AWS CLI2
+#    steps:
+#      - run:
+#          name: Install AWS CLI2
+#          command: |
+#            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+#            unzip awscliv2.zip
+#            sudo ./aws/install
+#            aws --version
 
 jobs:
-  build:
-    docker:
-      - image: 'circleci/python:latest'
+  build_deploy:
+    machine:
+      image: ubuntu-2004:202010-01
 
     steps:
       - checkout
+      - run:
+          name: Installing AWS CLI
+          command: | 
+            sudo apt-get update 
+            sudo apt install python3-pip 
+            sudo pip3 install awsebcli --upgrade
+      - run: aws s3 sync . s3://test-s3bucket-for-github-actions
 #      - aws-s3/sync:
 #          aws-access-key-id: AWS_ACCESS_KEY_ID
 #          aws-region: AWS_REGION
 #          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-      - aws-s3/sync:
-          from: .
-          to: 's3://test-s3bucket-for-github-actions'
-          arguments: |
-            --acl public-read \
-            --exclude ".git/*" \
-            --exclude ".gitignore" \
-            --exclude ".circleci/*" \
-          overwrite: true
+#      - aws-s3/sync:
+#          from: .
+#          to: 's3://test-s3bucket-for-github-actions'
+#          arguments: |
+#            --acl public-read \
+#            --exclude ".git/*" \
+#            --exclude ".gitignore" \
+#            --exclude ".circleci/*" \
+#          overwrite: true
