--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,17 @@
 version: 2.1
 orbs:
-  aws-s3: circleci/aws-s3@1.0.6
-commands:
-  install-awscliv2:
-    description: Install AWS CLI2
-    steps:
-      - run:
-          name: Install AWS CLI2
-          command: |
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip awscliv2.zip
-            sudo ./aws/install
-            aws --version
+  aws-s3: circleci/aws-s3@3.0.0
+#commands:
+#  install-awscliv2:
+#    description: Install AWS CLI2
+#    steps:
+#      - run:
+#          name: Install AWS CLI2
+#          command: |
+#            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+#            unzip awscliv2.zip
+#            sudo ./aws/install
+#            aws --version
 
 jobs:
   build:
