--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,23 +15,23 @@ orbs:
 
 jobs:
   build:
-    machine:
-      image: ubuntu-2004:202010-01
+    docker:
+      - image: 'cimg/python:3.6'
 
     steps:
       - checkout
-      - run:
-          name: Installing AWS CLI
-          command: | 
-            sudo apt-get update 
-            sudo apt install python3-pip 
-            sudo pip3 install awsebcli --upgrade
-      - run: aws s3 sync . s3://test-s3bucket-for-github-actions
-      - aws-s3/sync:
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-region: AWS_REGION
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-      - aws-s3/sync:
+#      - run:
+#          name: Installing AWS CLI
+#          command: |
+#            sudo apt-get update
+#            sudo apt install python3-pip
+#            sudo pip3 install awsebcli --upgrade
+#      - run: aws s3 sync . s3://test-s3bucket-for-github-actions
+#      - aws-s3/sync:
+#          aws-access-key-id: AWS_ACCESS_KEY_ID
+#          aws-region: AWS_REGION
+#          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+      - aws-s3/copy:
           from: .
           to: 's3://test-s3bucket-for-github-actions'
           arguments: |
@@ -40,3 +40,8 @@ jobs:
             --exclude ".gitignore" \
             --exclude ".circleci/*" \
           overwrite: true
+
+workflows:
+  s3-example:
+    jobs:
+      - build
