--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
-version: 2.1
-orbs:
-  aws-s3: circleci/aws-s3@3.0.0
+#version: 2.1
+#orbs:
+#  aws-s3: circleci/aws-s3@3.0.0
 #commands:
 #  install-awscliv2:
 #    description: Install AWS CLI2
@@ -13,13 +13,13 @@ orbs:
 #            sudo ./aws/install
 #            aws --version
 
-jobs:
-  build:
-    docker:
-      - image: 'cimg/python:3.6'
-
-    steps:
-      - checkout
+#jobs:
+#  build:
+#    docker:
+#      - image: 'cimg/python:3.6'
+#
+#    steps:
+#      - checkout
 #      - run:
 #          name: Installing AWS CLI
 #          command: |
@@ -31,16 +31,42 @@ jobs:
 #          aws-access-key-id: AWS_ACCESS_KEY_ID
 #          aws-region: AWS_REGION
 #          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-      - aws-s3/copy:
-          from: .
-          to: 's3://test-s3bucket-for-github-actions'
+#      - aws-s3/copy:
+#          from: .
+#          to: 's3://test-s3bucket-for-github-actions'
+#          arguments: |
+#            --acl public-read \
+#            --exclude ".git/*" \
+#            --exclude ".gitignore" \
+#            --exclude ".circleci/*" \
+#          overwrite: true
+#
+#workflows:
+#  s3-example:
+#    jobs:
+#      - build
+
+
+version: '2.1'
+orbs:
+  aws-s3: circleci/aws-s3@3.0
+jobs:
+  build:
+    docker:
+      - image: 'cimg/python:3.6'
+    steps:
+      - checkout
+#      - run: mkdir bucket && echo "lorem ipsum" > bucket/build_asset.txt
+      - aws-s3/sync:
           arguments: |
             --acl public-read \
-            --exclude ".git/*" \
-            --exclude ".gitignore" \
-            --exclude ".circleci/*" \
-          overwrite: true
-
+            --cache-control "max-age=86400"
+          from: .
+          to: 's3://test-s3bucket-for-github-actions'
+      - aws-s3/copy:
+          arguments: '--dryrun'
+          from: .
+          to: 's3://test-s3bucket-for-github-actions'
 workflows:
   s3-example:
     jobs:
