--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,13 +58,13 @@ jobs:
       - checkout
 #      - run: mkdir bucket && echo "lorem ipsum" > bucket/build_asset.txt
       - aws-s3/sync:
-          arguments: |
-            --acl public-read \
-            --cache-control "max-age=86400"
+#          arguments: |
+#            --acl public-read \
+#            --cache-control "max-age=86400"
           from: .
           to: 's3://test-s3bucket-for-github-actions'
       - aws-s3/copy:
-          arguments: '--dryrun'
+#          arguments: '--dryrun'
           from: .
           to: 's3://test-s3bucket-for-github-actions'
 workflows:
