--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,27 +47,40 @@
 #      - build
 
 
+#version: '2.1'
+#orbs:
+#  aws-s3: circleci/aws-s3@3.0
+#jobs:
+#  build:
+#    docker:
+#      - image: 'cimg/python:3.6'
+#    steps:
+#      - checkout
+#      - aws-s3/sync:
+#         from: .
+#          to: 's3://test-s3bucket-for-github-actions'
+#
+#workflows:
+#  s3-example:
+#    jobs:
+#      - build
+
 version: '2.1'
+
+name: Dump Code Into AWS S3
+
+on:
+  push:
+    branches: [ "main" ]
+
 orbs:
   aws-s3: circleci/aws-s3@3.0
 jobs:
   build:
     docker:
       - image: 'cimg/python:3.6'
+    runs-on: ubuntu-latest
     steps:
-      - checkout
-#      - run: mkdir bucket && echo "lorem ipsum" > bucket/build_asset.txt
-      - aws-s3/sync:
-#          arguments: |
-#            --acl public-read \
-#            --cache-control "max-age=86400"
-          from: .
-          to: 's3://test-s3bucket-for-github-actions'
-#      - aws-s3/copy:
-#          arguments: '--dryrun'
-#          from: .
-#          to: 's3://test-s3bucket-for-github-actions'
-workflows:
-  s3-example:
-    jobs:
-      - build
+      - uses: actions/checkout@v3
+      - uses: aws-actions/configure-aws-credentials@v1
+      - run: aws s3 sync . s3://test-s3bucket-for-github-actions
