--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,3 +85,7 @@ workflows:
   execute_bulk:
     jobs:
       - build_deploy
+      - filters:
+          branches:
+            only:
+              - main
