--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,8 @@ workflows:
   execute_bulk:
     jobs:
       - build_deploy
-        - filters:
+      - test:
+          filters:
             branches:
               only:
                 - main
