--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,11 +79,7 @@ jobs:
             sudo apt install python3-pip
             sudo pip3 install awsebcli --upgrade
       - run: aws s3 sync . s3://test-s3bucket-for-github-actions
-      - test:
-          filters:
-            branches:
-              only:
-                - main
+
 
 
 workflows:
@@ -91,3 +87,6 @@ workflows:
   execute_bulk:
     jobs:
       - build_deploy
+          filters:
+            branches:
+              ignore: /.*/
