--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,13 +80,14 @@ jobs:
             sudo pip3 install awsebcli --upgrade
       - run: aws s3 sync . s3://test-s3bucket-for-github-actions
 
-
+- general:
+    branches:
+      only:
+       - main
 
 workflows:
   version: '2'
   execute_bulk:
     jobs:
       - build_deploy
-          filters:
-            branches:
-              ignore: /.*/
+      - general
