--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@
 #            unzip awscliv2.zip
 #            sudo ./aws/install
 #            aws --version
-
+#
 #jobs:
 #  build:
 #    docker:
@@ -45,8 +45,8 @@
 #  s3-example:
 #    jobs:
 #      - build
-
-
+#
+#
 #version: '2.1'
 #orbs:
 #  aws-s3: circleci/aws-s3@3.0
@@ -64,7 +64,7 @@
 #  s3-example:
 #    jobs:
 #      - build
-
+#
 version: '2.1'
 jobs:
   build_deploy:
@@ -82,6 +82,6 @@ jobs:
 
 workflows:
   version: '2'
-  execute_bulk:
+  S3_sync:
     jobs:
       - build_deploy
